package com.mupper.personlist.data.remote

data class RemotePerson(
    val id: String?,
    val firstName: String?,
    val lastName: String?,
    val birthday: String?
)